# asyncio-generator-converter

./: .gitignore  asyncio_generator_converter.py  pyproject.toml  reqs-test.txt  setup.py
.github/workflows/: tests.yml
asyncio_generator_converter/: __init__.py
test/: _path_patch.py  test_converter.py
