[tool]
[tool.poetry]
name = "asyncio-generator-converter"
version = "0.1.3"
description = "convert a normal generator to an async generator with a decorator"
authors = ["Kyle Smith <smithk86@gmail.com>"]
license = "MIT"
repository = "https://github.com/smithk86/asyncio-generator-converter"
classifiers = [
    "Intended Audience :: Developers",
    "Framework :: AsyncIO",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = "^3.9"
janus = "*"

[tool.poetry.dev-dependencies]
mypy = "*"
pytest = "*"
pytest-asyncio = "*"
pytest-mypy = "*"

[tool.poetry.scripts]
pytest = "pytest:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--mypy"
